--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ocr-verifier",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "./dist/main/main.js",
   "scripts": {
     "start": "electron .",
+    "build": "tsc",
+    "dev": "npm run build && electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^34.1.1"
+    "electron": "^34.1.1",
+    "typescript": "^5.7.3"
   }
 }
