--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ocr-verifier",
   "version": "1.0.0",
   "main": "./dist/main/main.js",
+  "type": "module",
   "scripts": {
     "start": "electron .",
     "build": "tsc",
@@ -13,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/electron": "^1.6.12",
     "electron": "^34.2.0",
     "typescript": "^5.7.3"
   }
